# Inclinometer_dev

./: .gitignore  CMakeLists.txt  Inclinometer.c  README.md  powman_example.c
